--- a/Cosas/Cosas.csproj
+++ b/Cosas/Cosas.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Model\Thing.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\AboutAssets.txt" />
